@@ -1,6 +1,7 @@
 2009-11-03  Hideyuki SHIRAI  <shirai@meadowy.org>
 
-	* mew-w3m.el (mew-w3m-region-cite-mark): Change default value.
+	* mew-w3m.el (mew-w3m-region-cite-mark): Add new selection.
+	(mew-w3m-region): Rewrite.
 
 2009-11-02  Hideyuki SHIRAI  <shirai@meadowy.org>
 
